[package]
name = "doorstate-rs"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spaceapi = "^0.7"
rumqttc = "0.3"
regex = "1"
clap = { version = "2.33", features = ["yaml"]}
rust-pigpio = "0.2.0"